# download-magento-images-rs

./: .env  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: deploy.yml  rust-package.yml
.sqlx/: query-071f05b235745d98764840276ecba417d360c78e9db7855f7422e319659bca24.json  query-5c43f5b9f0523fd33024229c0d9dfb5bedb87880983cc36b54a5a49ccb8cf4f2.json  query-cb5dc82817fbd1fcaa3feaa40fec21819e90b60b7a4ea527dd4bdfdddbc076b2.json
src/: http.rs  main.rs
