[package]
name = "ecomdev-download-magento-images"
description = "CLI tool to download images from a store based on its database table"
version = "0.1.0"
edition = "2021"
authors = ["Ivan Chepurnyi <ivan@ecom.dev>"]
repository = "https://github.com/EcomDev/download-magento-images-rs"
license = "MIT"
rust-version = "1.80.0"

[dependencies]
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12.4", default-features = false, features = ["h2", "rustls-tls-webpki-roots", "brotli", "gzip"]}
indicatif = "0.17.8"
clap = {  version = "4", features = ["derive"] }
anyhow = { version = "1" }